redactable/tests/ui/sensitive_display_union_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
#[error("{value}")]
union DisplayUnion {
    value: u32,
}

fn main() {}
